# Japan-Inflation-Nowcast

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: fetch_macro_monthly.yml
api/: __init__.py  app.py  x402.py
config/: baskets.yaml  sources.yaml
config/normalize/: address.yaml  station.yaml  ward.yaml
dashboard/: README.md  __init__.py  render.py
data/: macro_reference.parquet
docs/: known_issues.md  macro_reference.md
etl/: __init__.py  food.py  housing.py
index_engine/: __init__.py  aggregate.py  composite.py  flow.py  food.py  hedonic.py  laspeyres.py
jobs/: __init__.py  daily.py  export_public.py  import_csv.py  validate.py
lib/: __init__.py  macro_reference.py
methodology/: __init__.py  generate.py  methodology.md
oracle/: README.md  __init__.py  publisher.py  web3_client.py
scrapers/: __init__.py  base.py  csv_base.py
scrapers/estat/: __init__.py  client.py  food.py  weights.py
scrapers/food/: __init__.py  (+2 more)
scripts/: __init__.py  cgpi_passthrough.py  fetch_cgpi.py  passthrough_prep.py  spread_monitor.py
storage/: __init__.py  db.py  models.py
tests/: conftest.py  test_csv_import.py  test_estat.py  test_export_public.py  test_food_units_and_n.py  test_macro_reference.py  test_phase0_scaffold.py  test_phase1_housing.py  test_phase2_housing_index.py  test_phase3_food.py  test_phase4_food_index.py  test_phase5_composite.py  test_phase6_api.py  test_phase7_pipeline.py  test_phase8_dashboard_oracle.py  test_phase9_daily_panel.py
(+28 files in other folders)
